# bawiki-data

./: .gitignore  .pdm-python  LICENSE  README.md  index.html  pyproject.toml  readme.md
.github/workflows/: deploy-static.yml  pre-deploy.yml
data/: emoji.json  event_alias.json  gacha.json  manga.json  raid_alias.json  schale_to_gamekee.json  stu_alias.json  suffix_alias.json  terrain_alias.json  wiki.json
scripts/: .gitignore  del_future.py  future_crop_test.py  gacha_1star.txt  gacha_2star.txt  gen_base_gacha.py  pre-deploy.sh  requirements.txt  update_alias_list.py  update_comic.py  update_emoji_list.py
scripts/base/: const.py  utils.py
scripts/pre_deploy/: __main__.py  gen_base_gacha.py  gen_gacha_data.py  update_comic.py  update_emoji_list.py  update_stu_alias_list.py  update_wiki_stu_li.py
scripts/tools/: compare_stu_list.py  del_future.py  future_crop_test.py
