[project]
name = "bawiki-data"
version = "0"
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "aiohttp>=3.9.3",
    "cn-sort>=0.8.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "anyio>=3.6.2",
]
requires-python = ">=3.9"

[tool.setuptools]
packages = []

[tool.pdm]
distribution = false

[tool.pyright]
pythonVersion = "3.10"
