[project]
name = "bawiki-data"
version = "0"
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "aiohttp>=3.9.5",
    "cn-sort>=0.8.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "anyio>=4.4.0",
]
requires-python = ">=3.9"

[tool.setuptools]
packages = []

[tool.pdm]
distribution = false
